# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_ast.py  build_diff_tree.py  generate_diff.py  parsers.py
gendiff/formaters/: __init__.py  common.py  formaters.py  plain_formater.py  render.py  stylish_formater.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: result_json.txt
