[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Gendiff (Hexlet Python Project Level 2)"
authors = ["neihaoo <neihaoo@gmail.com>"]
repository = "https://github.com/neihaoo/python-project-lvl2"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
